<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ParaBankCucumberMavenGithub</groupId>
  <artifactId>09_09_23-ParaBankCucumberMavenGithubProject</artifactId>
  <version>1.0.0</version>
  <name>ParaBankCucumberMavenGithubHybrid</name>
  <description>ParaBank Cucumber Maven Github Project</description>
  <properties>
	  <jre.level>1.7</jre.level>
	  <jdk.level>1.7</jdk.level>
  </properties>
  <build>
	  <plugins>
		  <plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-compiler-plugin</artifactId>
			  <version>3.11.0</version> <!-- auto generated-->
			  <configuration>
				  <fork>true</fork>
				  <executable>C:\Program Files\Java\jdk1.8.0_202\bin\javac.exe</executable>
				  <source>1.8</source>
				  <target>1.8</target>
			  </configuration>
		  </plugin>
		  <plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-surefire-plugin</artifactId>
			  <version>3.1.2</version> <!-- Auto generated-->
			  <configuration>
				  <parallel>classes</parallel>
				  <forkmode>Perthread</forkmode>
				  <threadCount>3</threadCount>
				  <reuseForks>true</reuseForks>
				  <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				  <includes>
					  <include>**/*Runner.java</include>
				  </includes>
			  </configuration>
		  </plugin>
	  </plugins>
  </build>
  
  <dependencies>  
	  <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
	<dependency>
    <groupId>org.seleniumhq.selenium</groupId>
    <artifactId>selenium-java</artifactId>
    <version>4.11.0</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit -->
<dependency>
    <groupId>info.cukes</groupId>
    <artifactId>cucumber-junit</artifactId>
    <version>1.2.5</version>
    <scope>test</scope>
</dependency>

<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-java -->
<dependency>
    <groupId>info.cukes</groupId>
    <artifactId>cucumber-java</artifactId>
    <version>1.2.5</version>
</dependency>

<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-core -->
<dependency>
    <groupId>info.cukes</groupId>
    <artifactId>cucumber-core</artifactId>
    <version>1.2.5</version>
</dependency>

<!-- https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
<dependency>
    <groupId>net.masterthought</groupId>
    <artifactId>cucumber-reporting</artifactId>
    <version>5.7.5</version>
</dependency>



</dependencies>
  
</project>